# student-score-management-be

./: .gitignore  main.py  pyproject.toml  requirements.txt
accounts/: admin.py  authentication.py  managers.py  middleware.py  models.py  permissions.py  serializers.py  trottles.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_user_role.py  0004_imageupload.py
accounts/utils/: cookies.py  emails.py  otp.py  registration.py  verification_session.py
config/: settings.py  urls.py
courses/: admin.py  models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py
docs/: index.html
forgot_password/: models.py  serializers.py  tests.py  urls.py  views.py
forgot_password/migrations/: 0001_initial.py
forgot_password/utils/: emails.py
grades/: models.py  serializers.py  tests.py  urls.py  views.py
grades/migrations/: 0001_initial.py  0002_grade_updated_by.py
notifications/: permissions.py  signals.py  urls.py
notifications/migrations/: 0001_initial.py
notifications/models/: admin_notification.py
notifications/serializers/: admin_notification.py
notifications/services/: admin_notifier.py  notification_create.py
notifications/views/: admin_notifications.py  admin_user_approval.py
students/: models.py  permissions.py
students/migrations/: 0001_initial.py
teachers/: models.py  permissions.py
teachers/migrations/: 0001_initial.py
templates/emails/: email_admin_pending_approval.html  email_forgot_password_otp.html  email_otp_verification.html  (+2 more)
